# terag

./: .gitignore  CLEANUP_PLAN.md  CONTRIBUTING.md  INTEGRATION_GUIDE.md  LICENSE  MANIFEST.in  Makefile  PUBLISHING_TO_PYPI.md  QUICKSTART.md  README.md  TERAG_ARCHITECTURE_AND_DECISIONS.md  TERAG_CODE_PATHS.md  TERAG_SEMANTIC_ENTITY_MATCHING_PROPOSAL.md  TERAG_USABILITY_EVALUATION_AND_PRIORITIZED_CHANGES.md  __init__.py  build_graph_demo.py  deduplicate_graph_demo.py  embedding_manager.py  entity_deduplicator.py  entity_merger.py  evals_plan.md  example_usage.py  extraction_cache.py  fast_retrieval_demo.py  graph_builder.py  graph_visualizer.py  hybrid_retriever.py  ingest_chunks.py  json_ingestion.py  json_ner_demo.py  merge_graphs.py  ner_extractor.py  openai_smart_dedup.py  ppr_retriever.py  pyproject.toml  query_explainer.py  query_processor.py  requirements.txt  resume_dedup.py  retrieval_demo.py  (+13 more)
.github/workflows/: ci.yml  publish.yml
benchmarks/: __init__.py
benchmarks/hotpotqa/: README.md  __init__.py
benchmarks/hotpotqa/baselines/: README.md  terag_ppr_openai_smoke.json
benchmarks/hotpotqa/configs/: dev_5pct.json  full.json  smoke.json
benchmarks/hotpotqa/manifests/: dev_5pct_seed42.json  smoke_seed42.json
benchmarks/hotpotqa/scripts/: __init__.py  common.py  compare.py  evaluate.py  inspect.py  sample.py
docs/: api-stability.md  langchain-integration.md  migration-0.8.md  retrieval-flow.md  technical-overview.md
examples/: README.md  complete_workflow.py  multi_llm_example.py  visual_terag_pipeline.py
examples/data/: chunks.json
terag/examples/: example_usage.py
terag/terag/: __init__.py  config.py  core.py
terag/terag/embeddings/: __init__.py  cache.py  manager.py
terag/terag/graph/: __init__.py  builder.py  deduplication.py  merger.py  types.py
terag/terag/ingestion/: __init__.py  groq_client.py  json_ingestion.py  llm_providers.py  ner_extraction.py  ner_extractor.py  pipeline.py  query_ner.py
terag/terag/integrations/: __init__.py  langchain.py
terag/terag/retrieval/: __init__.py  hybrid.py  ppr.py  query_processor.py  semantic.py
terag/terag/utils/: __init__.py  edge_weights.py  math.py
tests/: test_core.py  test_langchain_integration.py  test_semantic_entity_matching.py
tests/manual/: README.md  _paths.py  comprehensive_api_check.py  graph_persistence_check.py  llm_error_check.py  multi_llm_check.py  query_fix_check.py  terag_issue_check.py  unified_api_check.py
