[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "terag"
version = "0.8.0"
description = "Token-Efficient Retrieval Augmented Generation with Graph-based Indexing"
readme = "README.md"
authors = [
    { name = "Rudra Naik", email = "rudra91@gmail.com" }
]
license = { file = "LICENSE" }
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "numpy",
    "networkx",
    "tqdm"
]
requires-python = ">=3.8"

[project.optional-dependencies]
openai = [
    "openai",
    "python-dotenv"
]
groq = [
    "groq",
    "python-dotenv"
]
bench = [
    "openai",
    "python-dotenv"
]
local = [
    "sentence-transformers"
]
langchain = [
    "langchain-core"
]
visual = [
    "openai",
    "python-dotenv",
    "streamlit",
    "pypdf"
]
dev = [
    "pytest",
    "black",
    "isort",
    "openai",
    "groq",
    "python-dotenv",
    "langchain-core"
]
fuzzy = [
    "fuzzywuzzy",
    "python-Levenshtein"
]
all = [
    "openai",
    "groq",
    "python-dotenv",
    "sentence-transformers",
    "langchain-core",
    "streamlit",
    "pypdf",
    "fuzzywuzzy",
    "python-Levenshtein"
]

[project.urls]
"Homepage" = "https://github.com/rudranaik/terag"
"Bug Tracker" = "https://github.com/rudranaik/terag/issues"

[tool.setuptools.packages.find]
where = ["terag"]
exclude = ["examples*"]

[tool.setuptools.package-dir]
"" = "terag"
